# zania-coding-challenge

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: config.py  logging_config.py  main.py
app/api/: routes.py
app/models/: schemas.py
app/services/: document_loader.py  qa_service.py  vector_store.py
sample_docs/: extended_golden_dataset.json  golden_dataset.json  security_questions.json
scripts/: eval.py
static/: app.js  index.html  styles.css
tests/fixtures/: sample_document.json  sample_questions.json
tests/integration/: test_api.py
tests/unit/: test_document_loader.py  test_qa_service.py  test_vector_store.py
